resources/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
  - host: argocd.jonesax.dev
    http:
      paths:
      - backend:
          serviceName: argo-argocd-server
          servicePort: 80
  tls:
    - hosts:
      - argocd.jonesax.dev
      secretName: argocd-tls
