resources/ingress/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tracing-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
  - host: tracing.DOMAIN
    http:
      paths:
      - backend:
          serviceName: jaeger-with-create-schema-query
          servicePort: 16686
  tls:
    - hosts:
      - tracing.DOMAIN
      secretName: tracing-tls
